fix color palette on mobile

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -159,6 +159,7 @@ label {
   .color-palette {
     height: 30px;
     margin: 0 0 0 30px;
+    transform: rotate(-90deg) translate(147px, -146.5px);
   }
 
   h1 {
